refactor code and add new test methods